--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </style>
 </head>
 <body>
-<h1>Caddy web server.</h1>
-<p>If you see this page, Caddy container works.</p>
+<h1>Hello World</h1>
+<p>CI CD assignment</p>
 
 <p>More instructions about this image is <a href="//github.com/abiosoft/caddy-docker/blob/master/README.md" target="_blank">here</a>.<p>
 <p>More instructions about Caddy is <a href="//caddyserver.com/docs" target="_blank">here</a>.<p>
