--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1>Hello World</h1>
-<p>CI CD assignment</p>
+<p>This is a test CI CD assignment</p>
 
 <p>More instructions about this image is <a href="//github.com/abiosoft/caddy-docker/blob/master/README.md" target="_blank">here</a>.<p>
 <p>More instructions about Caddy is <a href="//caddyserver.com/docs" target="_blank">here</a>.<p>
